<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="20dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stat"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/textData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blank"
            android:textSize="25dp" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextureView
                android:id="@+id/preview_content"
                android:layout_width="match_parent"
                android:layout_height="560dp" />

            <ImageView
                android:id="@+id/image_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/frameRate"
            style="@style/TitleLable"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editFrameRate"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:inputType="numberSigned"
                android:hint="@string/frameRate" />

            <Button
                android:id="@+id/setFrameRate"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/editFrameRate"
                android:text="@string/setFrameRate" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/format"
            style="@style/TitleLable"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Spinner
                android:id="@+id/imageFormat"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:entries="@array/imageFormat" />

            <Button
                android:id="@+id/setFormat"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/imageFormat"
                android:text="@string/setFormat" />

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resolution"
            style="@style/TitleLable"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <EditText
                android:id="@+id/editFrameWidth"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:hint="@string/width"/>
            <TextView
                android:id="@+id/x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/editFrameWidth"
                android:layout_alignBaseline="@id/editFrameWidth"
                android:text="@string/x"/>
            <EditText
                android:id="@+id/editFrameHeight"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/x"
                android:gravity="center"
                android:hint="@string/height" />
            <Button
                android:id="@+id/setResolution"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/editFrameHeight"
                android:text="@string/setResolution"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/startStream"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:text="@string/startStream" />
            <Button
                android:id="@+id/stopStream"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/stopStream" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/getBuffer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/getBuffer"
                android:visibility="gone"/>
            <Button
                android:id="@+id/releaseBuffer"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/releaseBuffer"
                android:visibility="gone" />
            <Button
                android:id="@+id/dumpToFile"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/dump" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editOpen"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:hint="@string/camera_id" />
            <Button
                android:id="@+id/open"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/editOpen"
                android:text="@string/open" />

            <Button
                android:id="@+id/close"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/open"
                android:text="@string/close" />

            <Button
                android:id="@+id/setFocus"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/setFocus"
                android:visibility="gone"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led1"
            style="@style/TitleLable"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <SeekBar
                android:id="@+id/setLed1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:max="255"
                android:progress="128" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/led2"
            style="@style/TitleLable"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <SeekBar
                android:id="@+id/setLed2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:max="255"
                android:progress="128" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            style="@style/TitleLable"/>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/editRegisterAddr"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:hint="@string/registerAddr" />

            <EditText
                android:id="@+id/editRegisterValue"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/editRegisterAddr"
                android:hint="@string/registerValue" />

            <Button
                android:id="@+id/readRegister"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/editRegisterValue"
                android:text="@string/readRegister" />
            <Button
                android:id="@+id/writeRegister"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/readRegister"
                android:text="@string/writeRegister" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>